add netpol cross-ns

--- a/netpol/allow-deny-pod.yaml
+++ b/netpol/allow-deny-pod.yaml
@@ -1,10 +1,10 @@
-// Curl POD test
-k run test --image=alpine/curl --command sleep 3600
+#Curl POD test
+#k run test --image=alpine/curl --command sleep 3600
 
-kubectl run mypod --image=nginx --labels="app=mypod" --expose --port=80
+#kubectl run mypod --image=nginx --labels="app=mypod" --expose --port=80
 
+# Deny all ingress at pod web
 
-// Deny all ingress at pod web
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
