add netpol cross-ns

--- a/netpol/allow-deny-pod.yaml
+++ b/netpol/allow-deny-pod.yaml
@@ -4,7 +4,6 @@
 #kubectl run mypod --image=nginx --labels="app=mypod" --expose --port=80
 
 # Deny all ingress at pod web
-
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
@@ -15,7 +14,7 @@ spec:
       app: mypod
   ingress: []
 
-// Allow all ingress to pod web
+# Allow all ingress to pod web
 kind: NetworkPolicy
 apiVersion: networking.k8s.io/v1
 metadata:
