--- a/netpol/09-deny-egress-app.yaml
+++ b/netpol/09-deny-egress-app.yaml
@@ -1,15 +1,14 @@
 #kubectl run app1 --image=nginx --labels="app=app1" --expose --port=80
 #kubectl run app2 --image=nginx --labels="app=app2" --expose --port=80
 
-# Deny all egress traffic from pod app=app1
-apiVersion: networking.k8s.io/v1
+# Deny all egress traffic from all pod within ns space
 kind: NetworkPolicy
+apiVersion: networking.k8s.io/v1
 metadata:
-  name: deny-egress-all
+  name: deny-egress-all-namespace
+  namespace: default
 spec:
-  podSelector:
-    matchLabels:
-      app: app1
   policyTypes:
   - Egress
+  podSelector: {}
   egress: []
